# rules_tf2

./: .bazel_fix_commands.json  .bazelignore  .bazelrc  .bazelrc.user.example  .envrc  .gitignore  BUILD.bazel  CLAUDE.md  Dockerfile  LICENSE  MODULE.bazel  README.md  RESTRUCTURE_PLAN.md  flake.nix  go-plugin.patch  go.mod  go.sum  renovate.json  tools.go
docs/: BUILD.bazel  EXECUTION_TRACE.md  GAZELLE.md  LOCK_FILE_MANAGEMENT.md  PROVIDER_ARCHITECTURE.md  book.toml  reference_banner.md  reference_docs.bzl  serve.sh  tools.md
docs/src/: README.md  SUMMARY.md
docs/src/explanation/: README.md  architecture.md  documentation.md  hermeticity.md  linting.md  modules.md  opa.md  providers.md  publishing.md  sentinel.md  setup.md  terraform-stacks.md  validation.md
docs/src/guides/: README.md  add-a-provider.md  create-and-test-a-module.md  generate-build-files.md  publish-a-module.md  run-terraform.md  terraform-cloud.md  test-policies.md  use-an-external-module.md  write-native-tests.md
docs/src/reference/: README.md
docs/src/tutorials/: README.md
examples/basic_module/: BUILD.bazel  README.md  example_test.tftest.hcl  main.tf  outputs.tf  terraform.tf  variables.tf
examples/child_with_nested_dep/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf
examples/module_with_dependencies/: BUILD.bazel  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
examples/nested_dependency_test/: BUILD.bazel  README.md  main.tf  outputs.tf  variables.tf
examples/opa_policy/: BUILD.bazel  require_tags.rego  require_tags_test.rego
examples/parent_module/: BUILD.bazel  terraform.tf  variables.tf
examples/parent_with_explicit_deps/: BUILD.bazel  README.md  main.tf  outputs.tf
examples/sentinel_policy/: BUILD.bazel  require_tags.sentinel
examples/sentinel_policy/mocks/: mock-tfplan-fail.sentinel  mock-tfplan-pass.sentinel
go/hcl_tool/: BUILD  BUILD.bazel  main.go
go/hcl_tool/cmd/: BUILD.bazel  extract_module_lock.go  parse_lock.go  read_versions.go  reorganize.go  validate_versions.go  write_versions.go
go/hcl_tool/test/: BUILD.bazel  integration_test.go  lockfile_test.go  reorganize_test.go  versions_test.go
go/tflint_ruleset/: BUILD  BUILD.bazel  go.sum  main.go
go/tflint_ruleset/rules/: BUILD.bazel  terraform_file_organization.go  terraform_required_providers.go
go/tflint_ruleset/terraform/: BUILD.bazel  ruleset.go  runner.go  terraform.go
scripts/: BUILD.bazel  check_buildifier.sh  generate_provider_locks.sh  regenerate_versions.sh  tf_mod.sh  tf_upgrade_providers.sh  update_providers.sh
tests/: BUILD.bazel
tests/fixtures/: BUILD  BUILD.bazel
tests/fixtures/configs/: tfdoc-config.yaml  tflint-config-modules.hcl
tests/integration/: BUILD  BUILD.bazel
tests/integration/agent_image/: BUILD.bazel  verify_image.sh
tests/integration/another_module/: BUILD.bazel  README.md  main.tf  outputs.tf  terraform.tf
tests/integration/cdktf_test/: BUILD.bazel  README.md  test_generated.go  typescript_test.bazel
tests/integration/explicit_srcs_module/: BUILD.bazel  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
tests/integration/external_module/: BUILD.bazel  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
tests/integration/filesystem_mirror/: BUILD.bazel  verify_mirror.sh
tests/integration/hcl_versions_test/: BUILD.bazel  main.tf  terraform.tf
tests/integration/module_with_deps/: BUILD.bazel  README.md  main.tf  outputs.tf  terraform.tf  variables.tf
tests/integration/opa_policy/: BUILD.bazel  authz.rego  authz_test.rego
tests/integration/provider_cache/: BUILD  BUILD.bazel  README.md  main.tf  verify_cache_structure.sh
tests/integration/sample_tf_stack/: BUILD.bazel  components.tfcomponent.hcl  dev.tfdeploy.hcl  providers.tfcomponent.hcl  variables.tfcomponent.hcl
tests/integration/sentinel_policy/: BUILD.bazel  require_tags.sentinel
tests/integration/simple_module/: BUILD.bazel  README.md  main.tf  outputs.tf  simple_module.tftest.hcl  terraform.tf  variables.tf
tests/integration/simple_stack/: BUILD.bazel  README.md  main.tf  (+4 more)
tests/modules/: versions_with_modules.json
tests/providers/: BUILD.bazel  provider_locks.json  versions.json
tests/unit/: BUILD  BUILD.bazel  format_test.bzl  lint_test.bzl  lockfile_test.bzl  module_test.bzl  organization_test.bzl  provider_test.bzl  simple_test.bzl  validation_test.bzl  versions_test.bzl
tf/: BUILD.bazel  def.bzl  extensions.bzl
tf/execution/: BUILD  BUILD.bazel  tf_cloud_runner.bzl  tf_runner.bzl
tf/testing/: docs.bzl  format.bzl  lint.bzl  lockfile.bzl  module_deps.bzl  organization.bzl  test.bzl  validate.bzl  versions.bzl
tf/tests/: BUILD
tf2/: BUILD.bazel  def.bzl  extensions.bzl
tf2/agent/: BUILD.bazel  agent_image.bzl  filtered_mirror.bzl  provider_layer.bzl  terraformrc.bzl  tools_layer.bzl
tf2/cdktf/: BUILD  cdktf_common.bzl  cdktf_repository_gazelle.bzl
tf2/core/: BUILD.bazel
tf2/execution/: BUILD.bazel  tf_cloud_runner.bzl  tf_runner.bzl
tf2/gazelle/: BUILD.bazel  go.mod  terraform.go  terraform_test.go
tf2/internal/: BUILD.bazel  docs_collection.bzl  file_ops.bzl  hermetic_fetch.bzl  organization.bzl  sources_validation.bzl  staging.bzl
tf2/macros/: BUILD.bazel  tf_module.bzl  tf_stack.bzl
tf2/modules/: BUILD.bazel
tf2/opa/: BUILD.bazel  test.bzl
tf2/providers/: BUILD.bazel
tf2/runner/: BUILD.bazel  tf_runner.bzl
tf2/sentinel/: BUILD.bazel  test.bzl
tf2/testing/: BUILD.bazel  docs.bzl  format.bzl  lint.bzl  lint_with_plugins.bzl  module_deps.bzl  organization.bzl  test.bzl  tflint_config_generator.bzl  tflint_rules.bzl  validate.bzl  versions.bzl  versions_hcl.bzl
tf2/tfcloud/: BUILD.bazel  runner.bzl  workspace.bzl
tf2/tfcore/: BUILD.bazel  deps.bzl  export.bzl  module.bzl  nested.bzl  runner.bzl  test.bzl  tf_runner.bzl  validate.bzl  variables.bzl
tf2/tfdocs/: BUILD.bazel
tf2/tflint/: BUILD.bazel  config.bzl  defaults.bzl  format.bzl  test.bzl  validate.bzl
tf2/tfstack/: BUILD.bazel  deps.bzl  export.bzl  format.bzl  generate_versions.bzl  nested.bzl  stack.bzl  validate.bzl
tf2/tools/: BUILD.bazel
(+422 files in other folders)
