"""Public exports for tf2 module"""

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")

exports_files(["MODULE.bazel"])

# Clean, user-friendly aliases for external repositories
# Usage from other repos: bazel run @rules_tf2//:mod

# Complete terraform workflow (update versions + generate locks + regenerate files)
alias(
    name = "update",
    actual = "//scripts:tf_update",
    visibility = ["//visibility:public"],
)

# Generate provider locks and regenerate terraform.tf files
alias(
    name = "mod",
    actual = "//scripts:tf_mod",
    visibility = ["//visibility:public"],
)

# Update provider versions only
alias(
    name = "upgrade",
    actual = "//scripts:tf_upgrade_providers",
    visibility = ["//visibility:public"],
)

# Regenerate terraform.tf and docs only (Starlark)
alias(
    name = "regenerate",
    actual = "//scripts:tf_regenerate_all_starlark",
    visibility = ["//visibility:public"],
)

# Legacy aliases for backward compatibility
alias(
    name = "tf-upgrade-providers",
    actual = "//scripts:tf_upgrade_providers",
    visibility = ["//visibility:public"],
)

alias(
    name = "tf-mod",
    actual = "//scripts:tf_mod",
    visibility = ["//visibility:public"],
)

alias(
    name = "tf-update",
    actual = "//scripts:tf_update",
    visibility = ["//visibility:public"],
)

alias(
    name = "tf-regenerate-all-starlark",
    actual = "//scripts:tf_regenerate_all_starlark",
    visibility = ["//visibility:public"],
)

# Buildifier binary to check BUILD file formatting
# Use as: bazel run //:buildifier_check
sh_binary(
    name = "buildifier_check",
    srcs = ["//scripts:check_buildifier.sh"],
    tags = ["lint"],
)

# For CI/testing purposes - validates that source is available
sh_test(
    name = "buildifier_test",
    size = "small",
    srcs = ["//scripts:check_buildifier.sh"],
    data = glob(
        [
            "*.bzl",
            "**/*.BUILD",
            "**/*.bzl",
            "**/BUILD.bazel",
            "**/BUILD",
        ],
        exclude = ["BUILD.bazel"],
    ) + [
        "BUILD.bazel",
    ],
    tags = [
        "lint",
    ],
)
