"""Terraform rules for Bazel"""

module(
    name = "rules_tf2",
    version = "0.1.0",
)

##########################
# OVERRIDE PATHS
##########################
nixpkgs_repo = "https://github.com/tweag/rules_nixpkgs"
nixpkgs_commit = "cbaa7e62e9c4da23df247809a8f97db0e124ec8c"

# Core Dependencies
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_license", version = "1.0.0")

# Documentation generation
bazel_dep(name = "stardoc", version = "0.8.0")

# Nix support
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")

git_override(
    module_name = "rules_nixpkgs_core",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "core",
)

# Go support
bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.39.1")
bazel_dep(name = "rules_nixpkgs_go", version = "0.13.0")

git_override(
    module_name = "rules_nixpkgs_go",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "toolchains/go",
)

# CC toolchain support (required by Go)
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_nixpkgs_cc", version = "0.13.0")

git_override(
    module_name = "rules_nixpkgs_cc",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "toolchains/cc",
)

# Java runtime support (required by Bazel for tests)
bazel_dep(name = "rules_java", version = "8.6.1")
bazel_dep(name = "rules_nixpkgs_java", version = "0.13.0")

git_override(
    module_name = "rules_nixpkgs_java",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "toolchains/java",
)

# Nixpkgs setup - only when rules_tf2 is the root module (for development)
nixpkgs_repo_ext = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo", dev_dependency = True)
nixpkgs_repo_ext.flake(
    name = "nixpkgs",
    file_deps = ["//:flake.lock"],
    lock_file = "//:flake.lock",
)
use_repo(nixpkgs_repo_ext, "nixpkgs")

# Non-module dependencies for toolchains (only when root module)
non_module_deps = use_extension("//build/non_module_deps:non_module_deps.bzl", "non_module_deps", dev_dependency = True)
use_repo(non_module_deps, "nixpkgs_config_cc")
use_repo(non_module_deps, "nixpkgs_java_runtime")

# Note: Toolchains are registered by the root module that consumes this dependency

# Go dependencies for HCL tool
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//hcl_tool:go.mod")

# These are the dependencies that the HCL tool needs
use_repo(
    go_deps,
    "com_github_hashicorp_hcl_v2",
    "com_github_spf13_cobra",
    "com_github_stretchr_testify",
    "com_github_zclconf_go_cty",
)

# Module extension for provider management
tf_providers = use_extension("//tf2:extensions.bzl", "tf_providers")

# Download test providers for tf2 module testing (only when this is the root module)
tf_providers.download(
    lock_file = "tests/providers/terraform.lock.hcl",
    versions_file = "tests/providers/versions.json",
)

use_repo(tf_providers, "tf_provider_registry")

# Module extension for tool management  
tf_tools = use_extension("//tf2:extensions.bzl", "tf_tools")

# Configure tool versions
tf_tools.configure(
    terraform_version = "1.13.2",
    tflint_version = "0.59.1", 
    terraform_docs_version = "0.20.0",
)

# Configure tflint plugins for testing
tf_tools.tflint_plugin(
    name = "aws",
    version = "0.42.0",
)

tf_tools.tflint_plugin(
    name = "azurerm",
    version = "0.29.0",
)

tf_tools.tflint_plugin(
    name = "google",
    version = "0.35.0",
)

tf_tools.tflint_plugin(
    name = "opa",
    version = "0.9.0",
)

use_repo(tf_tools, "tf_tool_registry", "tflint_plugin_registry")
