"""Terraform rules for Bazel"""

module(
    name = "rules_tf2",
    version = "0.1.0",
    bazel_compatibility = [">=8.5.0"],
)

##########################
# OVERRIDE PATHS
##########################
nixpkgs_repo = "https://github.com/tweag/rules_nixpkgs"

nixpkgs_commit = "cbaa7e62e9c4da23df247809a8f97db0e124ec8c"

# Core Dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.5.0")

# Documentation generation
bazel_dep(name = "stardoc", version = "0.8.0")

# Nix support
bazel_dep(name = "rules_nixpkgs_core", version = "0.13.0")
git_override(
    module_name = "rules_nixpkgs_core",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "core",
)

# Go support
bazel_dep(name = "rules_go", version = "0.53.0")
bazel_dep(name = "gazelle", version = "0.47.0")
git_override(
    module_name = "gazelle",
    commit = "028c500e9f911a73683b6ec390f3e59e8f31fccc",
    remote = "https://github.com/bazelbuild/bazel-gazelle",
)

bazel_dep(name = "rules_nixpkgs_go", version = "0.13.0")
git_override(
    module_name = "rules_nixpkgs_go",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "toolchains/go",
)

# CC toolchain support (required by Go)
bazel_dep(name = "rules_cc", version = "0.2.0")
bazel_dep(name = "rules_nixpkgs_cc", version = "0.13.0")
git_override(
    module_name = "rules_nixpkgs_cc",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "toolchains/cc",
)

# Java runtime support (required by Bazel for tests)
bazel_dep(name = "rules_java", version = "8.15.2")
bazel_dep(name = "rules_nixpkgs_java", version = "0.13.0")
git_override(
    module_name = "rules_nixpkgs_java",
    commit = nixpkgs_commit,
    remote = nixpkgs_repo,
    strip_prefix = "toolchains/java",
)

# Nixpkgs setup - only when rules_tf2 is the root module (for development)
nixpkgs_repo_ext = use_extension("@rules_nixpkgs_core//extensions:repository.bzl", "nix_repo", dev_dependency = True)
nixpkgs_repo_ext.flake(
    name = "nixpkgs",
    file_deps = ["//:flake.lock"],
    lock_file = "//:flake.lock",
)
use_repo(nixpkgs_repo_ext, "nixpkgs")

# Non-module dependencies for toolchains (only when root module)
non_module_deps = use_extension("//build/non_module_deps:non_module_deps.bzl", "non_module_deps", dev_dependency = True)

# Development-only toolchains (when rules_tf2 is the root module)
# The Go toolchain requires a CC toolchain for building hcl_tool.
use_repo(non_module_deps, "nixpkgs_config_cc")
use_repo(non_module_deps, "nixpkgs_config_cc_info")
use_repo(non_module_deps, "nixpkgs_config_cc_toolchains")

# Bazel requires a Java runtime to run tests and stardoc.
use_repo(non_module_deps, "nixpkgs_java_runtime")
use_repo(non_module_deps, "nixpkgs_java_runtime_toolchain")
use_repo(non_module_deps, "nixpkgs_java_jdk_toolchain")

# mdbook for documentation generation
use_repo(non_module_deps, "nixpkgs_mdbook")

# Go SDK configuration for development (only when rules_tf2 is root module)
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.host()  # Use host Go SDK for development

# Register development-only toolchains when this is the root module
register_toolchains(
    "@nixpkgs_config_cc_toolchains//:all",
    "@nixpkgs_java_runtime_toolchain//:all",
    "@nixpkgs_java_jdk_toolchain//:all",
    dev_dependency = True,
)

# Go dependencies for HCL tool and tflint plugin (consolidated in //go:go.mod)
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(go_deps, "com_github_hashicorp_go_version", "com_github_hashicorp_hcl_v2", "com_github_hashicorp_terraform_registry_address", "com_github_spf13_cobra", "com_github_stretchr_testify", "com_github_terraform_linters_tflint_plugin_sdk", "com_github_zclconf_go_cty")

# Module extension for provider management
tf_providers = use_extension("//tf2:extensions.bzl", "tf_providers")

# Download test providers for tf2 module testing (only when this is the root module)
# Provider hashes are automatically generated and stored in MODULE.bazel.lock facts
tf_providers.download(
    versions_file = "tests/providers/versions.json",
)
use_repo(tf_providers, "tf_provider_registry")

# Module extension for tool management
tf_tools = use_extension("//tf2:extensions.bzl", "tf_tools")

# Configure tools from versions.json
tf_tools.from_versions_json(
    versions_file = "tests/providers/versions.json",
)
use_repo(tf_tools, "tf_tool_registry", "tflint_plugin_registry")

# Module extension for external module management
tf_modules = use_extension("//tf2:extensions.bzl", "tf_modules")
tf_modules.download(
    versions_file = "tests/modules/versions_with_modules.json",
)
use_repo(tf_modules, "tf_module_registry")
