"""Terraform rules for Bazel"""

module(
    name = "rules_tf2",
    version = "0.1.0",
    bazel_compatibility = [">=8.5.0"],
)

# Core Dependencies
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "bazel_skylib_gazelle_plugin", version = "1.8.2")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Documentation generation
bazel_dep(name = "stardoc", version = "0.8.0")

# Pinned direct so the @protobuf//bazel/toolchains:prefer_prebuilt_protoc flag
# (.bazelrc) is addressable from the root module's repo mapping.
bazel_dep(name = "protobuf", version = "33.4")

# Hermetic buildifier for the BUILD-file lint test (//:buildifier_test). Replaces
# the nix dev-shell's buildifier so the lint test runs on a bare runner.
bazel_dep(name = "buildifier_prebuilt", version = "8.5.1.2", dev_dependency = True)

# OCI container image support
bazel_dep(name = "rules_oci", version = "2.3.0")
bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5")  # Required for oci_pull in extensions

# Declared directly (not just transitively) so oci_pull'd base image repos can
# resolve the @package_metadata loads that rules_oci 2.3 emits.
bazel_dep(name = "package_metadata", version = "0.0.6")

# Hermetic jq for the registry publish flow (tf_publish).
bazel_dep(name = "jq.bzl", version = "0.6.1")

jq = use_extension("@jq.bzl//jq:extensions.bzl", "toolchains")
use_repo(jq, "jq_toolchains")

register_toolchains("@jq_toolchains//:all")

# Go support
bazel_dep(name = "rules_go", version = "0.61.1")
bazel_dep(name = "gazelle", version = "0.51.3")

# CC toolchain support (required by Go)
bazel_dep(name = "rules_cc", version = "0.2.21")

# Java runtime support (required by Bazel for tests)
bazel_dep(name = "rules_java", version = "9.6.1")

# Hermetic downloaded CC toolchain. Dev-only: consumers bring their own.
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    llvm_version = "19.1.7",
)

# Hermetic sysroot so C++ compiles reference libc headers by a package-relative
# path (required for RBE). Chromium sysroot, pinned per toolchains_llvm's e2e tests.
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@org_chromium_sysroot_linux_x64//sysroot",
    targets = ["linux-x86_64"],
)
use_repo(llvm, "llvm_toolchain")

sysroot = use_repo_rule("@toolchains_llvm//toolchain:sysroot.bzl", "sysroot")

sysroot(
    name = "org_chromium_sysroot_linux_x64",
    sha256 = "84656a6df544ecef62169cfe3ab6e41bb4346a62d3ba2a045dc5a0a2ecea94a3",
    urls = ["https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/2202c161310ffde63729f29d27fe7bb24a0bc540/debian_stretch_amd64_sysroot.tar.xz"],
)

# Non-module dependencies (only when root module): the downloaded mdbook binary
# used by the docs build.
non_module_deps = use_extension("//build/non_module_deps:non_module_deps.bzl", "non_module_deps", dev_dependency = True)
use_repo(non_module_deps, "mdbook")

# Go SDK configuration for development (only when rules_tf2 is root module).
# Downloaded (hermetic) rather than host, so no host Go is required.
# 1.25.3 matches the go directive in //go:go.mod (rules_go 0.61 supports it).
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk.download(version = "1.25.3")

# The remote JDK (rules_java) and Go SDK self-register; only the LLVM CC
# toolchain needs registering.
register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

# Go dependencies for HCL tool and tflint plugin (consolidated in //go:go.mod)
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//go:go.mod")
use_repo(go_deps, "com_github_hashicorp_go_version", "com_github_hashicorp_hcl_v2", "com_github_hashicorp_terraform_registry_address", "com_github_spf13_cobra", "com_github_stretchr_testify", "com_github_terraform_linters_tflint_plugin_sdk", "com_github_zclconf_go_cty")

# Module extension for provider management
tf_providers = use_extension("//tf2:extensions.bzl", "tf_providers")

# Download test providers for tf2 module testing (only when this is the root module)
# Provider hashes are automatically generated and stored in MODULE.bazel.lock facts
tf_providers.download(
    versions_file = "tests/providers/versions.json",
)
use_repo(tf_providers, "tf_provider_registry")

# Module extension for tool management
tf_tools = use_extension("//tf2:extensions.bzl", "tf_tools")

# Configure tools from versions.json
tf_tools.from_versions_json(
    versions_file = "tests/providers/versions.json",
)
use_repo(tf_tools, "tf_tool_registry", "tflint_plugin_registry")

# Module extension for external module management
tf_modules = use_extension("//tf2:extensions.bzl", "tf_modules")
tf_modules.download(
    versions_file = "tests/modules/versions_with_modules.json",
)
use_repo(tf_modules, "tf_module_registry")

# TFC agent base image (version dynamically read from versions.json)
tf_agent_base = use_extension("//tf2:extensions.bzl", "tf_agent_base", dev_dependency = True)
tf_agent_base.from_versions_json(
    versions_file = "//tests/providers:versions.json",
)
use_repo(tf_agent_base, "tfc_agent_base", "tfc_agent_base_linux_amd64", "tfc_agent_base_linux_arm64")
