"""Documentation generation for rules_tf2"""

# # Generate documentation for extensions
# stardoc(
#     name = "extensions_docs",
#     out = "extensions.md",
#     input = "//tf2:extensions.bzl",
#     deps = ["//tf2:extensions"],
# )

# Placeholder for documentation
filegroup(
    name = "all_docs",
    srcs = [
        # ":api_docs",
        # ":extensions_docs",
    ],
    visibility = ["//visibility:public"],
)
