load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
load("//tf2/providers/repository:regenerate_all.bzl", "tf_regenerate_all")

package(default_visibility = ["//visibility:public"])

# Shell script to upgrade provider versions only
sh_binary(
    name = "tf_upgrade_providers",
    srcs = ["tf_upgrade_providers.sh"],
    visibility = ["//visibility:public"],
)

# Shell script wrapper for complete provider update workflow
sh_binary(
    name = "tf_update",
    srcs = ["update_providers.sh"],
    data = [
        "tf_upgrade_providers.sh",
        "@tf_tool_registry//:all",
    ],
    visibility = ["//visibility:public"],
)

# Starlark rule to regenerate all versions and docs
tf_regenerate_all(
    name = "tf_regenerate_all_starlark",
)

# Export buildifier check script
exports_files(["check_buildifier.sh"])
