"""tf package exports"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

exports_files(["extensions.bzl", "def.bzl"])


# Public API
bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//tf2/providers/registry:provider_mirror",
        "//tf2/execution/macros:macros",
        "//tf2/publish/oci:oci_push",
        "//tf2/publish/cloud:tf_cloud_runner",
        "//tf2/runner:tf_runner",
        "//tf2/module/core:variables",
    ],
)

# Extensions for MODULE.bazel
bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//tf2/providers/repository:terraform_providers",
        "//tf2/tools/download:tools_repository",
    ],
)

# Generate documentation for all public API
stardoc(
    name = "api_docs",
    out = "api.md",
    input = "def.bzl",
    deps = [":def"],
    tags = ["manual"],  # Manual due to Java toolchain complexity
)
