"""tf package exports"""

load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@stardoc//stardoc:stardoc.bzl", "stardoc")

exports_files([
    "extensions.bzl",
    "def.bzl",
])

# Public API
bzl_library(
    name = "def",
    srcs = ["def.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//tf2/macros:tf_module",
        "//tf2/providers/registry:provider_mirror",
        "//tf2/publish/oci:oci_push",
        "//tf2/publish/registry:registry_publish",
        "//tf2/tfcloud:runner",
        "//tf2/tfcore:export",
        "//tf2/tfcore:runner",
        "//tf2/tfcore:tf_runner",
        "//tf2/tfcore:variables",
    ],
)

# Extensions for MODULE.bazel
bzl_library(
    name = "extensions",
    srcs = ["extensions.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//tf2/providers/repository:terraform_providers",
        "//tf2/tools/download:registry",
        "//tf2/tools/download:terraform",
        "//tf2/tools/download:terraform_docs",
        "//tf2/tools/download:tflint",
    ],
)

# Generate documentation for all public API
stardoc(
    name = "api_docs",
    out = "api.md",
    input = "def.bzl",
    tags = ["manual"],  # Manual due to Java toolchain complexity
    deps = [":def"],
)
