load("@rules_tf2//tf2:def.bzl", "tf_module")

# Child module with its own nested dependency
# KEY PRINCIPLE: Child declares its own dependencies
# Parent should NOT need to redeclare grandchild
tf_module(
    name = "tf_module",
    srcs = [
        "README.md",
        "main.tf",
        "outputs.tf",
        "terraform.tf",
        "variables.tf",
    ],
    modules = [
        "@rules_tf2//examples/nested_dependency_test:tf_module",
    ],
    providers = [
        "@tf_provider_registry//:null_3",
    ],
    visibility = ["//visibility:public"],
)
