load("@rules_tf2//tf2:def.bzl", "tf_module")

# Grandchild module - leaf with no dependencies
tf_module(
    name = "tf_module",
    srcs = [
        "README.md",
        "main.tf",
        "outputs.tf",
        "terraform.tf",
        "variables.tf",
    ],
    providers = [
        "@tf_provider_registry//:null_3",
    ],
    visibility = ["//visibility:public"],
)
